# VoxelEngine

./: .gitignore  CMakeLists.txt  CMakeListsDistributable.txt  CMakeListsLocal.txt  LICENSE  README.md
headers/: shader.h  utils.h
headers/player/: camera.h
headers/render/: chunk.h  chunkRenderer.h  mesh.h  ringBuffer.h
headers/utils/: dynamicArray.h  queue.h  shader.h  utils.h
headers/world/: block.h  chunkFileInterfacing.h  consts.h  worldGenerator.h
src/: camera.c  main.c  utils.c
src/player/: camera.c  camera.h
src/render/: chunk.c  chunk.h  chunkRenderer.c  chunkRenderer.h  mesh.c  ringBuffer.c  ringBuffer.h
src/shaders/: fragment.glsl  vertex.glsl
src/utils/: dynamicArray.c  queue.c  shader.c  utils.c  utils.h
src/world/: block.c  block.h  chunkFileInterfacing.c  consts.h  worldGenerator.c  worldGenerator.h
